--- a/app.json
+++ b/app.json
@@ -18,7 +18,13 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+          "NSAppTransportSecurity" : {
+            "NSAllowsArbitraryLoads" : true,
+                                
+          }
+      }
     },
     "android": {
       "adaptiveIcon": {
