--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-svg": "^13.6.0",
     "react-native-web": "~0.18.9",
     "socket.io-client": "^4.5.4",
     "twrnc": "^3.4.1"
