--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/ngrok": "^4.1.0",
     "axios": "^1.2.0",
     "expo": "~47.0.8",
+    "expo-barcode-scanner": "~12.1.0",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -26,6 +27,7 @@
     "@types/node": "^18.11.18",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
+    "expo-cli": "^6.1.0",
     "typescript": "^4.6.3"
   },
   "private": true
